Make sure that "common curve" property of the brush is never empty

It seems like there are brush presets in the wild which have it
empty. The preset in the bug report was saved with "Locked Properties"
feature active, which makes the preset loading code very confused.

BUG:461631